Add scaffolding for compliance declarations search endpoint
