# src/Api/Endpoints/ComplianceDeclarations/ComplianceDeclarationEndpoints.cs
@@ -1,0 +1,9 @@
+namespace Defra.WasteObligations.Api.Endpoints.ComplianceDeclarations;
+
+public static class ComplianceDeclarationEndpoints
+{
+    public static void MapComplianceDeclarationEndpoints(this IEndpointRouteBuilder app)
+    {
+        app.MapComplianceDeclarationsSearch();
+    }
+}
