# src/Api/Endpoints/Endpoints.cs
@@ -1,3 +1,4 @@
+using Defra.WasteObligations.Api.Endpoints.ComplianceDeclarations;
 using Defra.WasteObligations.Api.Endpoints.Organisations;
 
 namespace Defra.WasteObligations.Api.Endpoints;
@@ -7,5 +8,6 @@ public static class Endpoints
     public static void MapApiEndpoints(this IEndpointRouteBuilder app)
     {
         app.MapOrganisationEndpoints();
+        app.MapComplianceDeclarationEndpoints();
     }
 }
